refactor: remove codsmells